# basedengine

./: .gitignore  CMakeLists.txt  README.md
based/: CMakeLists.txt
based/cmake/: buildLua.cmake  getGlad.cmake  getGlm.cmake  getNuklear.cmake  getRmlUI.cmake  getSDL.cmake  getSDL_image.cmake  getSol.cmake
based/include/: ClassHelper.hpp  Console.hpp  Defs.hpp  Engine.hpp  EngineClient.hpp  GL_Util.hpp  Geometry.hpp  Logger.hpp  LuaFile.hpp  NuklearAuxiliaries.hpp  NuklearCommon.h  Polygon.hpp  Resource.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Util.hpp  Window.hpp
based/include/GL/: Polygon.hpp  Shader.hpp  Sprite.hpp  Texture.hpp
based/include/RML/: Context.hpp  DebugOverlay.hpp  Document.hpp  Font.hpp  Ids.hpp  Interface.hpp  Model.hpp  SystemInterface_SDL_Based.hpp  Util.hpp
based/include/RML/DebugOverlay/: Element.hpp  Overlay.hpp
based/include/Util/: AutocompleteTrie.hpp  Strings.hpp  TPS.hpp
based/include_internal/RML/: DebugOverlayData.hpp
based/include_internal/RML/DebugOverlay/: Callbacks.hpp  RmlDoc.hpp
based/include_internal/shaders_builtin/: 2d_forward.vert  2d_mvp.vert  2d_sampler.frag
based/src/: Console.cpp  Engine.cpp  EngineClient.cpp  GL_Util.cpp  LuaFile.cpp  NuklearImplement.c  Polygon.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Window.cpp
based/src/GL/: GL_Util.cpp  Polygon.cpp  Shader.cpp  Sprite.cpp  Texture.cpp
based/src/RML/: Context.cpp  DebugOverlay.cpp  Document.cpp  Interface.cpp  Model.cpp
based/src/RML/DebugOverlay/: Element.cpp  Overlay.cpp
based/src/Util/: AutocompleteTrie.cpp
cfg/01-helloworld/: config.lua
cmake/: buildLua.cmake  getLua.cmake  getSDL.cmake  getSol.cmake
demo/: CMakeLists.txt
demo/01-helloworld/: CMakeLists.txt  main.cpp  sceneMain.cpp  sceneMain.hpp
demo/02-image_shader/: CMakeLists.txt  config.hpp  hexShaderVert.hpp  main.cpp  sceneMain.hpp
demo/03-console_lua/: CMakeLists.txt  main.cpp  sceneMain.hpp
demo/assets/02-image_shader/: hex.frag
demo/cfg/01-helloworld/: config.lua
demo/cfg/02-image_shader/: config.lua
demo/cfg/03-console_lua/: config.lua
